feat: devcontainerにportforwardの設定を追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,5 +34,6 @@
         "yzhang.markdown-all-in-one",
         "tabnine.tabnine-vscode"
     ],
-    "features": {}
+    "features": {},
+    "forwardPorts": [5000]
 }
